modification fichier sass

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -759,12 +759,11 @@ ul li a .hand {
   }
   .menu-resto .contenant-carte {
     display: flex;
-    width: 90%;
+    width: 100%;
     justify-content: space-around;
-    flex-wrap: wrap;
   }
   .menu-resto .carte {
-    width: 44%;
+    width: 33%;
   }
   .menu-resto .carte .carte-titre {
     padding-left: 10px;
@@ -786,18 +785,19 @@ ul li a .hand {
   }
   .menu-resto .carte .carte-choix .carte-menu {
     display: flex;
-    width: 374px;
+    width: 96%;
     height: 70px;
     box-shadow: 6px 6px 6px #a4a3a3;
     margin-bottom: 15px;
     border-radius: 15px;
     background-color: white;
+    overflow: hidden;
   }
   .menu-resto .carte .carte-choix .carte-menu .carte-menu-text {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 353px;
+    width: 85%;
     margin-left: 10px;
     white-space: nowrap;
     overflow: hidden;
@@ -824,7 +824,7 @@ ul li a .hand {
     display: flex;
     align-items: flex-end;
     margin: 0 20px 12px 20px;
-    width: 40px;
+    width: 15%;
   }
   .menu-resto .carte .carte-choix .carte-menu .carte-menu-check {
     display: flex;
@@ -837,7 +837,8 @@ ul li a .hand {
     opacity: 0;
     position: relative;
     top: 0;
-    right: -70px;
+    right: -74px;
+    overflow: hidden;
   }
   .menu-resto .carte .carte-choix .carte-menu .carte-menu-check > .check-out {
     display: flex;
@@ -861,6 +862,7 @@ ul li a .hand {
   margin: 30px 0 50px 0;
   padding: 15px 50px;
   font-size: 16px;
+  background-color: #ff79da;
   color: white;
   border: none;
 }
@@ -1031,6 +1033,7 @@ ul li a .hand {
     margin-bottom: 15px;
     border-radius: 15px;
     background-color: white;
+    overflow: hidden;
   }
   .menu-resto .carte .carte-choix .carte-menu .carte-menu-text {
     display: flex;
