--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -81,12 +81,12 @@
         }
         .contenant-carte {
             display: flex ;
-            width: 90%;
+            width: 100%;
             justify-content: space-around;
-            flex-wrap: wrap;
+            // flex-wrap: wrap;
         }
         .carte {
-            width: 44%;
+            width: 33%;
             .carte-titre {
                 padding-left: 10px;
                 .titre-plat {
@@ -106,17 +106,18 @@
                 margin-top: 15px;
                 .carte-menu {
                     display: flex;
-                    width: 374px;
+                    width: 96%;
                     height: 70px;
                     box-shadow: 6px 6px 6px #a4a3a3;
                     margin-bottom: 15px;
                     border-radius: 15px;
                     background-color: white;
+                    overflow: hidden;
                     .carte-menu-text {
                         display: flex;
                         flex-direction: column;
                         justify-content: space-around;
-                        width: 353px;
+                        width: 85%;
                         margin-left: 10px;
                         white-space: nowrap;
                         overflow: hidden;
@@ -143,7 +144,7 @@
                         display: flex;
                         align-items: flex-end;
                         margin: 0 20px 12px 20px;
-                        width: 40px;
+                        width: 15%;
                     }
                     .carte-menu-check {
                         @include centrer;
@@ -152,10 +153,10 @@
                         background-color: $color-tertiary;
                         border-radius: 0 15px 15px 0;
                         opacity: 0;
-                        // transition: transform 500ms ease-in-out;
                         position: relative;
                         top: 0;
-                        right: -70px;
+                        right: -74px;
+                        overflow: hidden;
                         >.check-out {
                             display: flex;
                             align-items: center;
@@ -183,7 +184,7 @@
             margin: 30px 0 50px 0;
             padding: 15px 50px;
             font-size: 16px;
-            // background-color: #ff79da;
+            background-color: #ff79da;
             color: white;
             border: none;
             }
@@ -356,6 +357,7 @@
                     margin-bottom: 15px;
                     border-radius: 15px;
                     background-color: white;
+                    overflow: hidden;
                     .carte-menu-text {
                         display: flex;
                         flex-direction: column;
@@ -387,9 +389,9 @@
                         align-items: flex-end;
                         margin: 0 30px 12px 20px;
                     }
-                    }
-                }
+                } 
             }
+        }      
         .btn-menu {
             border-radius: 50px;
             margin: 30px 0 50px 0;
