--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -143,7 +143,7 @@
                     .carte-menu-prix {
                         display: flex;
                         align-items: flex-end;
-                        margin: 0 20px 12px 20px;
+                        margin: 0 0 12px 20px;
                         width: 15%;
                     }
                     .carte-menu-check {
@@ -155,7 +155,7 @@
                         opacity: 0;
                         position: relative;
                         top: 0;
-                        right: -74px;
+                        right: -80px;
                         overflow: hidden;
                         >.check-out {
                             display: flex;
@@ -165,19 +165,23 @@
                             color: white;
                         }
                     }
-                    &:hover >.carte-menu-check {
-                        width: 100px;
-                        opacity: 1;
-                        transform: translate(-100%, 0);
-                        transition: transform 1s ease;
-                        >.check-out {
-                            transform: rotate(360deg);
-                        }
+                &:hover >.carte-menu-check {
+                    width: 100px;
+                    opacity: 1;
+                    transform: translate(-100%, 0);
+                    transition: transform 1s ease;
+                    >.check-out {
+                        transform: rotate(360deg);
                     }
-                    }
+                }
+                &:hover >.carte-menu-prix {
+                    transform: translate(-50%, 0);
+                    transition: transform 1s linear;
+                }
                 }
             }
         }
+    }
         }
         .btn-menu {
             border-radius: 50px;
@@ -283,7 +287,10 @@
                         .carte-menu-prix {
                             display: flex;
                             align-items: flex-end;
-                            margin: 0 30px 12px 20px;
+                            margin: 0 0 12px 20px;
+                        }
+                        .carte-menu-check {
+                            right: -90px;
                         }
                     }
                 }
@@ -388,12 +395,15 @@
                             margin: 0;
                             text-overflow: ellipsis;
                         }
+                    } 
                     .carte-menu-prix {
                         display: flex;
                         align-items: flex-end;
-                        margin: 0 30px 12px 20px;
+                        margin: 0 0 12px 20px;
                     }
-                } 
+                    .carte-menu-check {
+                        right: -76px;
+                    }
             }
         }      
         .btn-menu {
