--- a/public/css/style.css
+++ b/public/css/style.css
@@ -648,6 +648,7 @@
 }
 body {
   margin: 0px;
+  box-sizing: border-box;
   font-family: roboto, arial, "Times New Roman", Times, serif;
 }
 
@@ -930,7 +931,7 @@ ul li a .hand {
   }
   .menu-resto .contenant-carte .carte .carte-choix .carte-menu {
     display: flex;
-    width: 96%;
+    width: 75%;
     height: 70px;
     box-shadow: 6px 6px 6px #a4a3a3;
     margin-bottom: 15px;
@@ -966,8 +967,7 @@ ul li a .hand {
   }
   .menu-resto .contenant-carte .carte .carte-choix .carte-menu .carte-menu-prix {
     display: flex;
-    align-items: flex-end;
-    margin: 0 0 12px 20px;
+    margin: 30px 0 0 20px;
   }
   .menu-resto .contenant-carte .carte .carte-choix .carte-menu .carte-menu-check {
     right: -90px;
@@ -1116,7 +1116,7 @@ ul li a .hand {
   justify-content: center;
 }
 .entete-menu .entete-menu-logo img {
-  height: 25px;
+  height: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
