--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -200,7 +200,7 @@
 
 
 @include for-tablet-down {
-
+ 
     .menu-img img{
         width: 100%;
         object-fit: cover;
@@ -251,7 +251,7 @@
                     margin-top: 15px;
                     .carte-menu {
                         display: flex;
-                        width: 96%;
+                        width: 75%;
                         height: 70px;
                         box-shadow: 6px 6px 6px #a4a3a3;
                         margin-bottom: 15px;
@@ -286,8 +286,8 @@
                         }
                         .carte-menu-prix {
                             display: flex;
-                            align-items: flex-end;
-                            margin: 0 0 12px 20px;
+                            // align-items: flex-end;
+                            margin: 30px 0 0 20px;
                         }
                         .carte-menu-check {
                             right: -90px;
