add font family

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -125,6 +125,7 @@
             text-align: center;
             font-weight: bold;
             margin: 10px 20px;
+            font-family: Shrikhand, arial,'Times New Roman', Times, serif;
         }
         .soustitre {
             font-size: 18px;
@@ -255,7 +256,7 @@
                     width: 60%;
                     h3 {
                         margin: 12px 0px;
-                        padding-left: 12px;
+                        padding-left: 12px
                     }
                     p {
                         margin-top: -5px;
