--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,6 +120,7 @@
     text-align: center;
     font-weight: bold;
     margin: 10px 20px;
+    font-family: Shrikhand, arial, "Times New Roman", Times, serif;
   }
   .titre .soustitre {
     font-size: 18px;
@@ -737,6 +738,7 @@ ul li a .hand {
   .menu-resto .menu-resto-nom .titre-menu {
     justify-content: flex-start;
     margin: 40px 10px;
+    font-family: Shrikhand, arial, "Times New Roman", Times, serif;
   }
   .menu-resto .menu-resto-nom .heart-menu {
     font-size: 30px;
@@ -967,6 +969,7 @@ ul li a .hand {
   }
   .menu-resto .contenant-carte .carte .carte-choix .carte-menu .carte-menu-prix {
     display: flex;
+    align-items: flex-end;
     margin: 30px 0 0 20px;
   }
   .menu-resto .contenant-carte .carte .carte-choix .carte-menu .carte-menu-check {
