--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -56,6 +56,7 @@
             .titre-menu {
                 justify-content: flex-start;
                 margin: 40px 10px;
+                font-family: Shrikhand, arial,'Times New Roman', Times, serif;
             }
             .heart-menu {
                 font-size: 30px;
@@ -286,7 +287,7 @@
                         }
                         .carte-menu-prix {
                             display: flex;
-                            // align-items: flex-end;
+                            align-items: flex-end;
                             margin: 30px 0 0 20px;
                         }
                         .carte-menu-check {
