--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -170,14 +170,14 @@
                     width: 100px;
                     opacity: 1;
                     transform: translate(-100%, 0);
-                    transition: transform 1s ease;
+                    transition: transform 1s ease-out;
                     >.check-out {
                         transform: rotate(360deg);
                     }
                 }
                 &:hover >.carte-menu-prix {
                     transform: translate(-50%, 0);
-                    transition: transform 1s linear;
+                    transition: transform 1s ease-out;
                 }
                 }
             }
@@ -252,7 +252,7 @@
                     margin-top: 15px;
                     .carte-menu {
                         display: flex;
-                        width: 75%;
+                        width: 96%;
                         height: 70px;
                         box-shadow: 6px 6px 6px #a4a3a3;
                         margin-bottom: 15px;
